services.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: backend
  name: backend
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: backend
status:
  loadBalancer: {}
