ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/managed-by: Bunnyshell
  name: custom-xxxxxx-ingress
spec:
  ingressClassName: bns-nginx
  rules:
  - host: be.example.com
    http:
      paths:
      - backend:
          service:
            name: backend
            port:
              number: 3080
        path: /
        pathType: Prefix
